# AfCFTA_Rules_of_Origin

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  TODO.org  afcfta_rule_checker_app.py  flake.nix  product_records.json
data/: rules.db
data/data/: rules.db
data/data/rules/75ecba93-6f3a-4f6d-8e60-0e81d6bf5bc1/: 0.rule
data/data/rules/aa90034a-37ff-45b7-b0d2-8c5af9a2972d/: 0.rule
data/rules/: index.json
data/rules/0b447499-3e58-4bb4-80a4-486be2177a7e/: 0.rule
data/rules/8a83fa2a-03ec-45a1-a0d9-4b8a3e038691/: 0.rule
data/rules/99756713-76ca-4b49-8e63-117d1732f55a/: 0.rule
data/rules/wholly_obtained_agricultural_rule/: 0.rule
data/rules/wholly_obtained_rule/: 0.rule  2.rule  3.rule
etc/contexts/: default.json
examples/: docks.doc.json  docks.ior  docks.json  docks.no_id.ior  submit.docks.json
examples/etc/contexts/: default.json
nix/: shell.nix
rules/: test_document.json
src/: db.rs  main.rs  rule.rs  submissions.rs
src/rules/: mod.rs  mod.rsy  parser.rs
test/bats/ingest/: ingest.bats  ior_format.bats  json_format.bats
test/fixtures/: deep_keys.json
