[package]
name = "rookie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio = { version = "1", features = ["full", "tracing", "signal"] }
tokio-tungstenite = "*"
tungstenite = { version = "*", default-features = false }
futures-channel = "0.3.28"
env_logger = "0.10.0"
serde_json = "1.0"